--- a/src/App.css
+++ b/src/App.css
@@ -40,21 +40,6 @@
   align-items: center;
 }
 
-.App-header .Func-Button-Remove {
-  cursor: pointer;
-  background-color: #1a2f5b;
-  border: #fff 1px solid;
-  color: #fff;
-  border-radius: 10px;
-  position: absolute;
-  right: 400px;
-  padding: 5px;
-  font-size: 19px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
 .App-header .Choose-wallet .Add-wallet {
   font-size: 18px;
   cursor: pointer;
@@ -155,4 +140,10 @@
   width: 100%;
   height: 40px;
   cursor: pointer;
+  border-radius: 5px;
+  font-size: 18px;
+  background: transparent;
+  border: #fff 1px solid;
+  color: #fff;
+  font-weight: bold;
 }
